--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,2 @@
 
-	_site/assets/img/11-1400.webp
-	_site/assets/img/11-480.webp
-	_site/assets/img/11-800.webp
-	_site/assets/img/3-1400.webp
-	_site/assets/img/3-480.webp
-	_site/assets/img/3-800.webp
-	_site/assets/img/6-1400.webp
-	_site/assets/img/6-480.webp
-	_site/assets/img/6-800.webp
-	_site/assets/img/9-1400.webp
-	_site/assets/img/9-480.webp
-	_site/assets/img/9-800.webp
-	_site/assets/img/photos-screenshot-1400.webp
-	_site/assets/img/photos-screenshot-480.webp
-	_site/assets/img/photos-screenshot-800.webp
-	_site/assets/img/publications-screenshot-1400.webp
-	_site/assets/img/publications-screenshot-480.webp
-	_site/assets/img/publications-screenshot-800.webp
+_site/*
