--- a/_config.yml
+++ b/_config.yml
@@ -109,6 +109,11 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  teaching:
+    defaults:
+      layout: entry
+    output: true 
+    permalink: /teaching/:path/
 
 news_limit: 5
 
