--- a/_config.yml
+++ b/_config.yml
@@ -84,9 +84,9 @@ panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: My Blog  # your blog must have a name for it to show up in the nav bar
-blog_description: WIP
-permalink: /blog/:year/:title/
+#blog_name: My Blog  # your blog must have a name for it to show up in the nav bar
+#blog_description: WIP
+#permalink: /blog/:year/:title/
 
 # Pagination
 pagination:
@@ -110,10 +110,11 @@ collections:
     output: true
     permalink: /projects/:path/
   teaching:
-    defaults:
-      layout: entry
     output: true 
     permalink: /teaching/:path/
+  achievements:
+    output: true 
+    permalink: /achievements/:path/
 
 news_limit: 5
 
@@ -199,10 +200,10 @@ jekyll-archives:
     year: archive-year
     tag: archive-tag
     category: archive-category
-  permalinks:
-    year: '/blog/:year/'
-    tag: '/blog/tag/:name/'
-    category: '/blog/category/:name/'
+  #permalinks:
+  #  year: '/blog/:year/'
+  #  tag: '/blog/tag/:name/'
+  #  category: '/blog/category/:name/'
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
