--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baseurl: # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
-remote_theme: #RalphMcDougall/al-folio
+#remote_theme: RalphMcDougall/al-folio
 
 # -----------------------------------------------------------------------------
 # RSS Feed
@@ -84,9 +84,9 @@ panelbear_analytics:  # panelbear analytics site ID (format: XXXXXXXXX)
 # Blog
 # -----------------------------------------------------------------------------
 
-#blog_name: My Blog  # your blog must have a name for it to show up in the nav bar
-#blog_description: WIP
-#permalink: /blog/:year/:title/
+blog_name:  # your blog must have a name for it to show up in the nav bar
+blog_description: 
+permalink: /blog/:year/:title/
 
 # Pagination
 pagination:
