--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ stackoverflow_id: #your stackoverflow id
 rss_icon: false
 
 contact_note: >
-  Please contact me over LinkedIn for professional queries.
+  If you have any queries, please contact me over LinkedIn.
 
 google_analytics:  # your google-analytics ID (format: UA-XXXXXXXXX)
 google_site_verification:  # your google-site-verification ID (Google Search Console)
